--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -591,6 +591,7 @@
 					<p><i class="fa fa-phone-square"></i> +48 555 2566 112</p>
 				</div>
 			</div>
+
 			<div class="col-md-3 col-xs-4 col-3xs-12">
 				<div class="team-v-8">
 					<img class="img-responsive" src="assets/img-temp/team/team3.jpg" alt="">
@@ -684,7 +685,92 @@
 						<h3 class="ms-info-name">Joseph B. Seward</h3>
 						<h4 class="ms-info-position">Aodi</h4>
 						<p><em>"Maecenas sit amet consectetur lectus. Suspendisse commodo et magna non pulvinar. Quisque et ultricies sem, et vulputate dui. Morbi aliquam leo id ipsum tempus mollis."</em></p>
+
+		</section>
+		<!-- End Testimonials section -->
+
+		<!-- Blog section -->
+		<section id="blog">
+			<div class="container g-pt-100 g-pb-30">
+				<div class="row">
+					<div class="col-sm-8 col-sm-offset-2">
+						<div class="g-heading-v9 text-center g-mb-30">
+							<h2 class="text-uppercase"><strong>Latest Posts</strong></h2>
+						</div>
+						<p class="g-fs-16 text-center g-mb-70">Keep up to date with all of the great things that are happening at Case Consulting by reading our blog and following us on <a href="twitter.com"> Twitter</a>!</p>
 					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-4 col-3xs-12 lawyer-post g-mb-50">
+						<img class="img-responsive full-width g-mb-25" src="assets/img-temp/blog/interns.jpg" alt="">
+						<p class="g-fs-10 g-theme-text-color-1"><strong>May 22, 2017</strong></p>
+						<h5 class="text-uppercase"><strong>new interns</strong></h5>
+						<p class="g-fs-10 text-uppercase">by not jacob or fahad...promise</p>
+						<p>The Case Consulting team would like to welcome the new interns to the family.</p>
+						<p class="g-mt-30"><a class="btn-u btn-u-lg btn-u-red btn-u-upper" href="#">Read more</a></p>
+					</div>
+					<div class="col-xs-4 col-3xs-12 lawyer-post g-mb-50">
+						<img class="img-responsive full-width g-mb-25" src="assets/img-temp/blog/javascriptlogo.jpg" alt="">
+						<p class="g-fs-10 g-theme-text-color-1"><strong>June 2, 2017</strong></p>
+						<h5 class="text-uppercase"><strong>The Famous Bob Talks</strong></h5>
+						<p class="g-fs-10 text-uppercase">by Joe Everyman</p>
+						<p>One of the Case team members will be giving a talk on the history of Javascript!</p>
+						<p class="g-mt-30"><a class="btn-u btn-u-lg btn-u-red btn-u-upper" href="#">Read more</a></p>
+					</div>
+					<div class="col-xs-4 col-3xs-12 lawyer-post g-mb-50">
+						<img class="img-responsive full-width g-mb-25" src="assets/img-temp/blog/galaxyv2.jpg" alt="">
+						<p class="g-fs-10 g-theme-text-color-1"><strong>May 19, 2017</strong></p>
+						<h5 class="text-uppercase"><strong>case team goes to the movies!</strong></h5>
+						<p class="g-fs-10 text-uppercase">by Jacob Boisseau</p>
+						<p>The Case Consulting team went to watch Guardians of the Galaxy Vol. 2! Some of the team members give their reviews...</p>
+						<p class="g-mt-30"><a class="btn-u btn-u-lg btn-u-red btn-u-upper" href="#">Read more</a></p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End Blog section -->
+
+		<!-- Footer -->
+
+		<footer>
+			<!-- Contact section -->
+			<section id="contact" class="g-theme-bg-color-1 g-text-color-2">
+				<div class="container-fluid">
+					<div class="row no-column-space equal-height-columns">
+						<div class="col-sm-6 g-dp-table g-va-middle equal-height-column">
+							<div class="g-pl-80 g-pr-80 g-pl-15--xs g-pr-15--xs g-pt-100 g-pb-50 g-dp-table-cell g-va-middle">
+								<div class="g-heading-v9 g-mb-30">
+									<h2 class="text-uppercase"><strong>Get In Touch</strong></h2>
+								</div>
+								<p class="g-fs-16 g-mb-60">Case Consulting has an established reputation and level of trust with the client, so contact us to discuss how we can continue to build a productive relationship and deliver impeccable results for our clients.</p>
+								<ul class="list-unstyled g-fs-12 address-list text-uppercase">
+									<li><i class="fa fa-map-marker g-mr-15"></i> <em>Address:</em> <strong>12110 Sunset Hills Rd, Reston, VA 20190</strong></li>
+									<li><i class="fa fa-phone g-mr-15"></i> <em>Phone Number:</em> <strong> New Phone who dis</strong></li>
+									<li><i class="fa fa-envelope g-mr-15"></i> <em>Email:</em> <strong>info@consultwithcase.com</strong></li>
+
+								</ul>
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div id="map" class="contact-section-map"></div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- End Contact section -->
+<!--
+			<section class="footer-section container g-pt-50">
+				<div class="row">
+					<div class="col-sm-4 g-mb-40">
+						<h5 class="text-uppercase g-mb-20"><strong>Text widget</strong></h5>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae est lorem. Aenean imperdiet nisi a dolor condimentum, id ullamcorper lacus vestibulum. Praesent pulvinar gravida. Aenean lobortis ante ac porttitor eleifend.</p>
+						<ul class="social-icons-v-2">
+							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+						</ul>
+				</div>
 				</div>
 				<!-- End Item 5 -->
 			</div>
@@ -780,6 +866,7 @@
 						</ul>
 					</div>
 				</div>
+
 				<div class="col-sm-6">
 					<div id="map" class="contact-section-map"></div>
 				</div>
