--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -12,7 +12,7 @@
   <meta name="author" content="">
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="../favicon.ico">
+	<link rel="shortcut icon" href="assets-case/img/navlogo.png">
 
 	<!-- Web Fonts -->
 	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600,800&amp;subset=cyrillic,latin">
@@ -60,7 +60,7 @@
 					</button>
 
 					<a class="navbar-brand" href="#body">
-						<img src="assets/img/logo-dark.png" alt="Logo">
+						<img src="assets-case/img/logo-banner.gif" alt="Logo">
 					</a>
 				</div>
 
@@ -114,7 +114,7 @@
 						<li data-index="rs-68" data-transition="zoomout" data-slotamount="default" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="assets/img-temp/promo/img1.jpg" data-rotate="0" data-saveperformance="off" data-title="Intro" data-description="">
 
 							<!-- MAIN IMAGE -->
-							<img src="assets/img-temp/promo/img1.jpg" alt="" data-bgposition="50% 10%" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+							<img src="assets-case/img/DC-min.png" alt="" data-bgposition="50% 10%" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
 
 							<!-- LAYERS -->
 
@@ -159,7 +159,7 @@
 								data-splitout="none"
 								data-responsive_offset="on"
 
-								style="z-index: 7; white-space: nowrap; text-align: center; text-transform: uppercase;">The Law<br> Must Work
+								style="z-index: 7; white-space: nowrap; text-align: center; text-transform: uppercase;">detail oriented.<br> customer focused.
 							</div>
 
 							<!-- LAYER NR. 4 -->
@@ -181,7 +181,7 @@
 								data-splitout="none"
 								data-responsive_offset="on"
 
-								style="z-index: 8; white-space: nowrap; text-align: center; text-transform: uppercase;">Donec erat urna, tincidunt at leo non, blandit finibus ante.<br> Nunc venenatis risus in finibus dapibus. Ut ac massa sodales,<br> mattis enim id, efficitur tortor. Nullam
+								style="z-index: 8; white-space: nowrap; text-align: center; text-transform: uppercase;">
 							</div>
 
 							<!-- LAYER NR. 5 -->
@@ -223,22 +223,22 @@
 				<div class="row equal-height-columns">
 					<div class="col-sm-4 g-text-color-1">
 						<div class="arrow-section-block arrow-bottom text-center equal-height-column">
-							<h3 class="text-uppercase g-mb-30"><strong>We Know Our Job</strong></h3>
-							<p>Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in. Donec in blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc ullamcorper, justo a iaculis elementum, enim orci viverra eros, fringilla porttitor lorem eros vel odio. In rutrum tellus vitae blandit lacinia.</p>
+							<h3 class="text-uppercase g-mb-30"><strong>Work that Matters</strong></h3>
+							<p>Case Consulting is a small business focused on providing highly talented, exceptionally skilled developers, managers and integrators to meet mission critical requirements across the IC.</p>
 						</div>
 						<div class="arrow-section-img"><img class="full-width" src="assets/img-temp/PeopleImages.com-ID439488.jpg" alt=""></div>
 					</div>
 					<div class="col-sm-4 g-text-color-2 g-theme-bg-color-1">
 						<div class="arrow-section-img"><img class="full-width" src="assets/img-temp/PeopleImages.com-ID32028.jpg" alt=""></div>
 						<div class="arrow-section-block arrow-top text-center equal-height-column">
-							<h3 class="text-uppercase g-mb-30"><strong>We Are The Best</strong></h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae est lorem. Aenean imperdiet nisi a dolor condimentum, id ullamcorper lacus vestibulum. Praesent pulvinar gravida efficitur. Aenean bibendum purus eu nisi pulvinar venenatis vitae non velit.</p>
+							<h3 class="text-uppercase g-mb-30"><strong>Clients that care</strong></h3>
+							<p>We provide top-notch IT staff to Commercial and Federal Government customers with experience in delivering superior system engineering expertise, project management support, and application development and design via Agile methodologies.</p>
 						</div>
 					</div>
 					<div class="col-sm-4 g-text-color-1">
 						<div class="arrow-section-block arrow-bottom text-center equal-height-column">
-							<h3 class="text-uppercase g-mb-30"><strong>We Are Winners</strong></h3>
-							<p>Aenean lobortis ante ac porttitor eleifend. Morbi massa justo, gravida sollicitudin tortor vel, dignissim viverra lectus. In varius blandit condimentum. Pellentesque rutrum mauris ornare libero imperdiet pellentesque. Ut porta consequat mi, non malesuada.</p>
+							<h3 class="text-uppercase g-mb-30"><strong>Leaders that captivate</strong></h3>
+							<p>Case Consulting has a well-earned reputation for quality, responsiveness and absolute excellence.  We take pride in our ability to fully understand and embrace our customers and their needs, and provide innovative, polished, and inspiring applications of systems and technology.</p>
 						</div>
 						<div class="arrow-section-img"><img class="full-width" src="assets/img-temp/PeopleImages.com-ID479997.jpg" alt=""></div>
 					</div>
@@ -308,7 +308,7 @@
 								<div class="g-heading-v9 g-mb-30">
 									<h2><strong>Why Choose Us</strong></h2>
 								</div>
-								<p class="g-fs-16 g-mb-50">Donec in blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc ullamcorper, justo a iaculis elementum, enim orci viverra eros, fringilla porttitor lorem eros vel odio.</p>
+								<p class="g-fs-16 g-mb-50">Case Consulting is committed to creating a close knit culture of technology professionals, focused on delivering superior expertise and support, and application development to customers in the Commercial and Federal Government markets.  Case Consulting recognizes that employees are its number one asset and therefore offers a salary and benefits package that reflect this.</p>
 								<ul class="list-unstyled marked-list-v1">
 									<li data-mark="+">
 										<h5 class="text-uppercase"><strong>Professional Staff</strong></h5>
@@ -345,25 +345,75 @@
 						<div class="g-pl-80 g-pr-80 g-pl-15--xs g-pr-15--xs g-dp-table-cell g-va-middle equal-height-column">
 							<div class="g-pt-100 g-pb-30">
 								<div class="g-heading-v9 g-mb-30">
-									<h2><strong>Our Benefits</strong></h2>
+									<h2><strong>Benefits</strong></h2>
 								</div>
-								<p>Aenean lobortis ante ac porttitor eleifend. Morbi massa justo, gravida sollicitudin tortor vel, dignissim viverra lectus. In varius blandit condimentum. Pellentesque rutrum mauris ornare libero imperdiet pellentesque.</p>
+								<p>Case Consulting recognizes that employees are its number one asset and therefore offers a salary and benefits package that reflect this.</p>
+
+								<!--benefits list  -->
 								<ul class="list-unstyled standart-column-space row">
+
+									<!-- Retirement -->
 									<li class="col-md-6 g-mb-20">
-										<h5 class="text-uppercase"><strong>Free Advice</strong></h5>
-										<p>Praesent pulvinar gravida efficitur. Aenean bibendum purus eu nisi pulvinar venenatis vitae non velit. Sed et eleifend mi. Fusce dictum orci libero.</p>
+										<h5 class="text-uppercase"><strong>Retirement</strong></h5>
+										<ul class="list-unstyled marked-list-v1">
+											<li data-mark="+">
+												<p>Monthly contribution of 3% of your salary in your <a id="retirement-link"href="http://www.sharebuilder401k.com/">401k</a>, without the requirement of an employee contribution with an annual lump sum profit sharing of 10%, deposited at the end of each year.</p>
+											</li>
+										</ul>
 									</li>
+
+									<!--Health Care-->
 									<li class="col-md-6 g-mb-20">
-										<h5 class="text-uppercase"><strong>Documentation Support</strong></h5>
-										<p>Suspendisse pulvinar facilisis ligula vel pharetra. Vestibulum volutpat porttitor ex a rutrum. Aenean consectetur risus ultricies enim finibus lobortis non at ipsum.</p>
+										<h5 class="text-uppercase"><strong>Health Care</strong></h5>
+										<ul class="list-unstyled marked-list-v1">
+											<li data-mark="+">
+												<p> Full Medical, Dental, and Vision insurance coverage through Anthem BlueCross BlueShield PPO </p>
+											</li>
+											<li data-mark="+">
+												<p> Includes a Health Savings Account (HSA) for immediate family members.  HSA allows funds to be set aside and invested, to be used on future medical expenses, tax free! </p>
+											</li>
+											<li data-mark="+">
+												<p> Case Consulting contributes up to $4000 to employee HSAs </p>
+											</li>
+										</ul>
 									</li>
+
+									<!-- Professional Development -->
 									<li class="col-md-6 g-mb-20">
-										<h5 class="text-uppercase"><strong>Professional Teams</strong></h5>
-										<p>Integer commodo est id erat bibendum, eu convallis dolor tempus. Fusce mollis blandit eros. Nunc quis sapien in massa varius convallis at sed justo.</p>
+										<h5 class="text-uppercase"><strong>Health Care</strong></h5>
+										<ul class="list-unstyled marked-list-v1">
+											<li data-mark="+">
+												<p> abc </p>
+											</li>
+											<li data-mark="+">
+												<p> abc </p>
+											</li>
+											<li data-mark="+">
+												<p> abc </p>
+											</li>
+											<li data-mark="+">
+												<p> abc </p>
+											</li>
+										</ul>
 									</li>
+
+									<!-- Additional Benefits -->
 									<li class="col-md-6 g-mb-20">
-										<h5 class="text-uppercase"><strong>60 Years Experience</strong></h5>
-										<p>Ut a libero magna. Aenean sagittis nisi non ex venenatis, vel commodo tortor eleifend. Nunc feugiat, est quis rutrum sodales, nunc nibh pharetra nibh</p>
+										<h5 class="text-uppercase"><strong>Health Care</strong></h5>
+										<ul class="list-unstyled marked-list-v1">
+											<li data-mark="+">
+												<p> abc </p>
+											</li>
+											<li data-mark="+">
+												<p> abc </p>
+											</li>
+											<li data-mark="+">
+												<p> abc </p>
+											</li>
+											<li data-mark="+">
+												<p> abc </p>
+											</li>
+										</ul>
 									</li>
 								</ul>
 							</div>
