--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -362,6 +362,17 @@
 									</div>
 									<div id="collapse1" class="panel-collapse collapse in">
 										<div class="panel-body">
+											<ul class="list-unstyled marked-list-v1">
+												<li data-mark="+">
+													<p>Monthly contribution of 3% of your salary in your <a id="retirement-link"href="http://www.sharebuilder401k.com/">401k</a>, without the requirement of an employee contribution.</p>
+												</li>
+												<li data-mark="+">
+													<p>Annual lump sum profit sharing of 10%, deposited at the end of each year.</p>
+												</li>
+												<li data-mark="+">
+													<p>Employees are immediately fully vested in the plan.</p>
+												</li>
+											</ul>
 										</div>
 									</div>
 								</div>
@@ -373,7 +384,19 @@
 										</h4>
 									</div>
 									<div id="collapse2" class="panel-collapse collapse">
-										<div class="panel-body">Panel</div>
+										<div class="panel-body">
+											<ul class="list-unstyled marked-list-v1">
+												<li data-mark="+">
+													<p> Full Medical, Dental, and Vision insurance coverage through Anthem BlueCross BlueShield PPO </p>
+												</li>
+												<li data-mark="+">
+													<p> Includes a Health Savings Account (HSA) for immediate family members.  HSA allows funds to be set aside and invested, to be used on future medical expenses, tax free! </p>
+												</li>
+												<li data-mark="+">
+													<p> Case Consulting contributes up to $4000 to employee HSAs </p>
+												</li>
+											</ul>
+										</div>
 									</div>
 								</div>
 
@@ -384,7 +407,13 @@
 										</h4>
 									</div>
 									<div id="collapse3" class="panel-collapse collapse">
-										<div class="panel-body">Panel</div>
+										<div class="panel-body">
+											<ul class="list-unstyled marked-list-v1">
+												<li data-mark="+">
+													<p>33 days of leave each year for PTO, Holidays and Training).</p>
+												</li>
+											</ul>
+										</div>
 									</div>
 								</div>
 
@@ -395,7 +424,19 @@
 										</h4>
 									</div>
 									<div id="collapse4" class="panel-collapse collapse">
-										<div class="panel-body">Panel</div>
+										<div class="panel-body">
+											<ul class="list-unstyled marked-list-v1">
+												<li data-mark="+">
+													<p>$3,500 per year towards professional development and certification</p>
+												</li>
+												<li data-mark="+">
+													<p>Includes certifications, screencasts, CBTs, conferences, books, etc.</p>
+												</li>
+												<li data-mark="+">
+													<p>24 hours per year of PTO for professional development and certification</p>
+												</li>
+											</ul>
+										</div>
 									</div>
 								</div>
 
@@ -406,75 +447,23 @@
 										</h4>
 									</div>
 									<div id="collapse5" class="panel-collapse collapse">
-										<div class="panel-body">Panel</div>
+										<div class="panel-body">
+											<ul class="list-unstyled marked-list-v1">
+												<li data-mark="+">
+													<p>$1800 per calendar year towards purchase of employee computer/tablet or other technology related device</p>
+												</li>
+												<li data-mark="+">
+													<p>$2500 referral bonus for fully cleared candidates</p>
+												</li>
+												<li data-mark="+">
+													<p>Dependent care account providing tax deferred savings for child care</p>
+												</li>
+											</ul>
+										</div>
 									</div>
 								</div>
 
 							</div>
-
-							<!-- Retirement -->
-							<li class="col-md-6 g-mb-20">
-								<h5 class="text-uppercase"><strong>Retirement</strong></h5>
-								<ul class="list-unstyled marked-list-v1">
-									<li data-mark="+">
-										<p>Monthly contribution of 3% of your salary in your <a id="retirement-link"href="http://www.sharebuilder401k.com/">401k</a>, without the requirement of an employee contribution with an annual lump sum profit sharing of 10%, deposited at the end of each year.</p>
-									</li>
-								</ul>
-							</li>
-
-							<!--Health Care-->
-							<li class="col-md-6 g-mb-20">
-								<h5 class="text-uppercase"><strong>Health Care</strong></h5>
-								<ul class="list-unstyled marked-list-v1">
-									<li data-mark="+">
-										<p> Full Medical, Dental, and Vision insurance coverage through Anthem BlueCross BlueShield PPO </p>
-									</li>
-									<li data-mark="+">
-										<p> Includes a Health Savings Account (HSA) for immediate family members.  HSA allows funds to be set aside and invested, to be used on future medical expenses, tax free! </p>
-									</li>
-									<li data-mark="+">
-										<p> Case Consulting contributes up to $4000 to employee HSAs </p>
-									</li>
-								</ul>
-							</li>
-
-							<!-- Professional Development -->
-							<li class="col-md-6 g-mb-20">
-								<h5 class="text-uppercase"><strong>Health Care</strong></h5>
-								<ul class="list-unstyled marked-list-v1">
-									<li data-mark="+">
-										<p> abc </p>
-									</li>
-									<li data-mark="+">
-										<p> abc </p>
-									</li>
-									<li data-mark="+">
-										<p> abc </p>
-									</li>
-									<li data-mark="+">
-										<p> abc </p>
-									</li>
-								</ul>
-							</li>
-
-							<!-- Additional Benefits -->
-							<li class="col-md-6 g-mb-20">
-								<h5 class="text-uppercase"><strong>Health Care</strong></h5>
-								<ul class="list-unstyled marked-list-v1">
-									<li data-mark="+">
-										<p> abc </p>
-									</li>
-									<li data-mark="+">
-										<p> abc </p>
-									</li>
-									<li data-mark="+">
-										<p> abc </p>
-									</li>
-									<li data-mark="+">
-										<p> abc </p>
-									</li>
-								</ul>
-							</li>
 						</ul>
 					</div>
 				</div>
