content-adding: added new colors

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -326,6 +326,7 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="col-sm-6">
 				<img class="equal-height-column" src="assets/img-temp/PeopleImages.com-ID64840.jpg" alt="" height="500">
 			</div>
@@ -459,6 +460,126 @@
 													<p>Dependent care account providing tax deferred savings for child care</p>
 												</li>
 											</ul>
+
+		</section>
+		<!-- End Benefits section -->
+
+		<!-- careers section -->
+		<section id="our-cases">
+			<div class="container g-pt-100">
+				<div class="row">
+					<div class="col-md-10 col-md-offset-1 text-center">
+						<div class="g-heading-v9 text-center g-mb-30">
+							<h2><strong>Careers</strong></h2>
+						</div>
+						<p class="g-fs-16 g-mb-60">Case Consulting is interested in experienced professionals with niche skills, who are focused on delivering value to the client, in a flexible non-bureaucratic environment.</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12">
+						<ul class="owl-lawyer list-unstyled g-text-color-2 equal-height-columns">
+
+							<!-- item -1 -->
+							<li class="item">
+								<div class="col-sm-6">
+									<div class="caption-outer">
+										<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID46357.jpg" alt="">
+										<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
+											<div class="valign__middle">
+												<h5 class="text-uppercase"><strong>PROJECT MANAGER</strong></h5>
+												<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!-- item0 -->
+								<div class="col-sm-6">
+									<div class="caption-outer">
+										<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID1265766.jpg" alt="">
+										<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
+											<div class="valign__middle">
+												<h5 class="text-uppercase"><strong>Interns</strong></h5>
+												<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</li>
+							<!-- item1 -->
+							<li class="item">
+								<div class="col-sm-6">
+									<div class="caption-outer">
+										<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID32142.jpg" alt="">
+										<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
+											<div class="valign__middle">
+												<h5 class="text-uppercase"><strong>SYSTEM ENGINEER</strong></h5>
+												<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!-- item2 -->
+								<div class="col-sm-6">
+									<div class="caption-outer">
+										<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID375436.jpg" alt="">
+										<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
+											<div class="valign__middle">
+												<h5 class="text-uppercase"><strong>SYSTEM INTEGRATOR</strong></h5>
+												<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</li>
+							<!-- item3 -->
+							<li class="item">
+								<div class="col-sm-6">
+									<div class="caption-outer">
+										<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID32142.jpg" alt="">
+										<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
+											<div class="valign__middle">
+												<h5 class="text-uppercase"><strong>DEVELOPER</strong></h5>
+												<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!-- item4 -->
+								<div class="col-sm-6">
+									<div class="caption-outer">
+										<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID375436.jpg" alt="">
+										<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
+											<div class="valign__middle">
+												<h5 class="text-uppercase"><strong>Account Manager</strong></h5>
+												<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</li>
+							<!-- item5 -->
+							<li class="item">
+								<div class="col-sm-6">
+									<div class="caption-outer">
+										<img class="img-responsive" src="assets/img-temp/cases/flickr.com___photos___highwaysagency___5998133376___sizes___o.jpg" alt="">
+										<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
+											<div class="valign__middle">
+												<h5 class="text-uppercase"><strong>SYSTEM ADMINISTRATOR</strong></h5>
+												<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!-- item6 -->
+								<div class="col-sm-6">
+									<div class="caption-outer">
+										<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID48289.jpg" alt="">
+										<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
+											<div class="valign__middle">
+												<h5 class="text-uppercase"><strong>Fun haver</strong></h5>
+												<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
+											</div>
+
 										</div>
 									</div>
 								</div>
@@ -468,105 +589,11 @@
 					</div>
 				</div>
 			</div>
+
 		</div>
 	</div>
 </section>
-<!-- End Benefits section -->
 
-<!-- Our cases section -->
-<section id="our-cases">
-	<div class="container g-pt-100">
-		<div class="row">
-			<div class="col-md-10 col-md-offset-1 text-center">
-				<div class="g-heading-v9 text-center g-mb-30">
-					<h2><strong>Our Cases</strong></h2>
-				</div>
-				<p class="g-fs-16 g-mb-60">Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in. Donec in blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc ullamcorper, justo a iaculis elementum, enim orci viverra eros, fringilla porttitor lorem eros vel odio.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-12">
-				<ul class="owl-lawyer list-unstyled g-text-color-2 equal-height-columns">
-					<li class="item">
-						<div class="col-sm-6">
-							<div class="caption-outer">
-								<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID46357.jpg" alt="">
-								<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-									<div class="valign__middle">
-										<h5 class="text-uppercase"><strong>Fusce Dictum Orci Libero</strong></h5>
-										<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-6">
-							<div class="caption-outer">
-								<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID1265766.jpg" alt="">
-								<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-									<div class="valign__middle">
-										<h5 class="text-uppercase"><strong>Integer Commodo</strong></h5>
-										<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</li>
-
-					<li class="item">
-						<div class="col-sm-6">
-							<div class="caption-outer">
-								<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID32142.jpg" alt="">
-								<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-									<div class="valign__middle">
-										<h5 class="text-uppercase"><strong>Fusce Dictum Orci Libero</strong></h5>
-										<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-6">
-							<div class="caption-outer">
-								<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID375436.jpg" alt="">
-								<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-									<div class="valign__middle">
-										<h5 class="text-uppercase"><strong>Integer Commodo</strong></h5>
-										<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</li>
-
-					<li class="item">
-						<div class="col-sm-6">
-							<div class="caption-outer">
-								<img class="img-responsive" src="assets/img-temp/cases/flickr.com___photos___highwaysagency___5998133376___sizes___o.jpg" alt="">
-								<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-									<div class="valign__middle">
-										<h5 class="text-uppercase"><strong>Fusce Dictum Orci Libero</strong></h5>
-										<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-6">
-							<div class="caption-outer">
-								<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID48289.jpg" alt="">
-								<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
-									<div class="valign__middle">
-										<h5 class="text-uppercase"><strong>Integer Commodo</strong></h5>
-										<p>Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- End Our cases section -->
 
 <!-- Team section -->
 <section id="team">
