img-adding: changed our cases to careers in nav and in id tag

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -81,7 +81,7 @@
 								<a href="#benefits"><span data-hover="Benefits">Benefits</span></a>
 							</li>
 							<li class="page-scroll">
-								<a href="#our-cases"><span data-hover="Our cases">Our cases</span></a>
+								<a href="#careers"><span data-hover="Careers">Careers</span></a>
 							</li>
 							<li class="page-scroll">
 								<a href="#team"><span data-hover="Team">Team</span></a>
@@ -469,7 +469,7 @@
 		<!-- End Benefits section -->
 
 		<!-- careers section -->
-		<section id="our-cases">
+		<section id="careers">
 			<div class="container g-pt-100">
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 text-center">
