added some css styling

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -351,13 +351,13 @@
 						<p>Case Consulting recognizes that employees are its number one asset and therefore offers a salary and benefits package that reflect this.</p>
 
 						<!--benefits list  -->
-						<ul class="list-unstyled standart-column-space row">
-							<!-- Accordian -->
-							<div class="panel-group col-sm-6 g-mb-20" id="accordion">
 
-								<div class="panel panel-default">
+							<!-- Accordian -->
+							<div class="panel-group" id="accordion">
+
+								<div  class="panel panel-default">
 									<div class="panel-heading">
-										<h4 class="panel-title">
+										<h4 id="retirement-header" class="panel-title">
 											<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Retirement</a>
 										</h4>
 									</div>
@@ -411,7 +411,7 @@
 										<div class="panel-body">
 											<ul class="list-unstyled marked-list-v1">
 												<li data-mark="+">
-													<p>33 days of leave each year for PTO, Holidays and Training).</p>
+													<p>33 days of leave each year for PTO, Holidays and Training.</p>
 												</li>
 											</ul>
 										</div>
