img-adding: added pictures

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -226,10 +226,10 @@
 					<h3 class="text-uppercase g-mb-30"><strong>Work that Matters</strong></h3>
 					<p>Case Consulting is a small business focused on providing highly talented, exceptionally skilled developers, managers and integrators to meet mission critical requirements across the IC.</p>
 				</div>
-				<div class="arrow-section-img"><img class="full-width" src="assets/img-temp/PeopleImages.com-ID439488.jpg" alt=""></div>
+				<div class="arrow-section-img"><img class="full-width" src="assets/img/workstation.jpeg" alt=""></div>
 			</div>
 			<div class="col-sm-4 g-text-color-2 g-theme-bg-color-1">
-				<div class="arrow-section-img"><img class="full-width" src="assets/img-temp/PeopleImages.com-ID32028.jpg" alt=""></div>
+				<div class="arrow-section-img"><img class="full-width" src="assets/img/conference-room.jpg" alt=""></div>
 				<div class="arrow-section-block arrow-top text-center equal-height-column">
 					<h3 class="text-uppercase g-mb-30"><strong>Clients that care</strong></h3>
 					<p>We provide top-notch IT staff to Commercial and Federal Government customers with experience in delivering superior system engineering expertise, project management support, and application development and design via Agile methodologies.</p>
@@ -240,7 +240,7 @@
 					<h3 class="text-uppercase g-mb-30"><strong>Leaders that captivate</strong></h3>
 					<p>Case Consulting has a well-earned reputation for quality, responsiveness and absolute excellence.  We take pride in our ability to fully understand and embrace our customers and their needs, and provide innovative, polished, and inspiring applications of systems and technology.</p>
 				</div>
-				<div class="arrow-section-img"><img class="full-width" src="assets/img-temp/PeopleImages.com-ID479997.jpg" alt=""></div>
+				<div class="arrow-section-img"><img class="full-width" src="assets/img/suit.jpg" alt=""></div>
 			</div>
 		</div>
 	</div>
@@ -328,7 +328,7 @@
 			</div>
 
 			<div class="col-sm-6">
-				<img class="equal-height-column" src="assets/img-temp/PeopleImages.com-ID64840.jpg" alt="" height="500">
+				<img class="equal-height-column" src="assets/img/people.jpg" alt="" height="500">
 			</div>
 		</div>
 	</div>
@@ -340,7 +340,7 @@
 	<div class="container-fluid">
 		<div class="row equal-height-columns">
 			<div class="col-sm-6">
-				<img class="equal-height-column hidden-xs" src="assets/img-temp/PeopleImages.com-ID376522.jpg" alt="" height="500">
+				<img class="equal-height-column hidden-xs" src="assets/img/benefit.jpeg" alt="" height="500">
 			</div>
 			<div class="col-sm-6 g-dp-table g-va-middle">
 				<div class="g-pl-80 g-pr-80 g-pl-15--xs g-pr-15--xs g-dp-table-cell g-va-middle equal-height-column benefits-container">
@@ -487,7 +487,7 @@
 							<li class="item">
 								<div class="col-sm-6">
 									<div class="caption-outer">
-										<img class="img-responsive" src="assets/img-temp/cases/PeopleImages.com-ID46357.jpg" alt="">
+										<img class="img-responsive" src="assets/img/code.jpeg" alt="">
 										<div class="caption g-theme-bg-color-transparent-1 g-va-middle g-padding-25">
 											<div class="valign__middle">
 												<h5 class="text-uppercase"><strong>PROJECT MANAGER</strong></h5>
