Added some swanky styling css to our shwisty new website

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -343,12 +343,12 @@
 				<img class="equal-height-column hidden-xs" src="assets/img-temp/PeopleImages.com-ID376522.jpg" alt="" height="500">
 			</div>
 			<div class="col-sm-6 g-dp-table g-va-middle">
-				<div class="g-pl-80 g-pr-80 g-pl-15--xs g-pr-15--xs g-dp-table-cell g-va-middle equal-height-column">
+				<div class="g-pl-80 g-pr-80 g-pl-15--xs g-pr-15--xs g-dp-table-cell g-va-middle equal-height-column benefits-container">
 					<div class="g-pt-100 g-pb-30">
 						<div class="g-heading-v9 g-mb-30">
 							<h2><strong>Benefits</strong></h2>
 						</div>
-						<p>Case Consulting recognizes that employees are its number one asset and therefore offers a salary and benefits package that reflect this.</p>
+						<p id="benefits-description">Case Consulting recognizes that employees are its number one asset and therefore offers a salary and benefits package that reflect this.</p>
 
 						<!--benefits list  -->
 
@@ -365,13 +365,13 @@
 										<div class="panel-body">
 											<ul class="list-unstyled marked-list-v1">
 												<li data-mark="+">
-													<p>Monthly contribution of 3% of your salary in your <a id="retirement-link"href="http://www.sharebuilder401k.com/">401k</a>, without the requirement of an employee contribution.</p>
+													<p class="benefits-bullets">Monthly contribution of 3% of your salary in your <a id="retirement-link"href="http://www.sharebuilder401k.com/">401k</a>, without the requirement of an employee contribution.</p>
 												</li>
 												<li data-mark="+">
-													<p>Annual lump sum profit sharing of 10%, deposited at the end of each year.</p>
+													<p class="benefits-bullets">Annual lump sum profit sharing of 10%, deposited at the end of each year.</p>
 												</li>
 												<li data-mark="+">
-													<p>Employees are immediately fully vested in the plan.</p>
+													<p class="benefits-bullets">Employees are immediately fully vested in the plan.</p>
 												</li>
 											</ul>
 										</div>
@@ -388,13 +388,13 @@
 										<div class="panel-body">
 											<ul class="list-unstyled marked-list-v1">
 												<li data-mark="+">
-													<p> Full Medical, Dental, and Vision insurance coverage through Anthem BlueCross BlueShield PPO </p>
+													<p class="benefits-bullets"> Full Medical, Dental, and Vision insurance coverage</p>
 												</li>
 												<li data-mark="+">
-													<p> Includes a Health Savings Account (HSA) for immediate family members.  HSA allows funds to be set aside and invested, to be used on future medical expenses, tax free! </p>
+													<p class="benefits-bullets"> Includes a Health Savings Account for immediate family members, allowing funds to be set aside to be used on future medical expenses</p>
 												</li>
 												<li data-mark="+">
-													<p> Case Consulting contributes up to $4000 to employee HSAs </p>
+													<p class="benefits-bullets"> Case Consulting contributes up to $4000 to employee HSAs</p>
 												</li>
 											</ul>
 										</div>
@@ -408,10 +408,10 @@
 										</h4>
 									</div>
 									<div id="collapse3" class="panel-collapse collapse">
-										<div class="panel-body">
+										<div class="panel-body sliding-middle-out ">
 											<ul class="list-unstyled marked-list-v1">
 												<li data-mark="+">
-													<p>33 days of leave each year for PTO, Holidays and Training.</p>
+													<p class="benefits-bullets">33 days of leave each year for PTO, Holidays and Training.</p>
 												</li>
 											</ul>
 										</div>
@@ -425,16 +425,16 @@
 										</h4>
 									</div>
 									<div id="collapse4" class="panel-collapse collapse">
-										<div class="panel-body">
+										<div class="panel-body sliding-middle-out ">
 											<ul class="list-unstyled marked-list-v1">
 												<li data-mark="+">
-													<p>$3,500 per year towards professional development and certification</p>
+													<p class="benefits-bullets">$3,500 per year towards professional development and certification</p>
 												</li>
 												<li data-mark="+">
-													<p>Includes certifications, screencasts, CBTs, conferences, books, etc.</p>
+													<p class="benefits-bullets">Includes certifications, screencasts, CBTs, conferences, books, etc.</p>
 												</li>
 												<li data-mark="+">
-													<p>24 hours per year of PTO for professional development and certification</p>
+													<p class="benefits-bullets">24 hours per year of PTO for professional development and certification</p>
 												</li>
 											</ul>
 										</div>
@@ -451,15 +451,19 @@
 										<div class="panel-body">
 											<ul class="list-unstyled marked-list-v1">
 												<li data-mark="+">
-													<p>$1800 per calendar year towards purchase of employee computer/tablet or other technology related device</p>
+													<p class="benefits-bullets">$1800 per calendar year towards purchase of employee computer/tablet or other technology related device</p>
 												</li>
 												<li data-mark="+">
-													<p>$2500 referral bonus for fully cleared candidates</p>
+													<p class="benefits-bullets">$2500 referral bonus for fully cleared candidates</p>
 												</li>
 												<li data-mark="+">
-													<p>Dependent care account providing tax deferred savings for child care</p>
+													<p class="benefits-bullets">Dependent care account providing tax deferred savings for child care</p>
 												</li>
 											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
 
 		</section>
 		<!-- End Benefits section -->
