switched benefits and careers. added new events section

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -72,16 +72,16 @@
 								<a href="#about"><span data-hover="About">About</span></a>
 							</li>
 							<li class="page-scroll">
-								<a href="#services"><span data-hover="Services">Services</span></a>
+								<a href="#benefits"><span data-hover="benefits">Benefits</span></a>
 							</li>
 							<li class="page-scroll">
 								<a href="#why-we"><span data-hover="Why we">Why we</span></a>
 							</li>
 							<li class="page-scroll">
-								<a href="#benefits"><span data-hover="Benefits">Benefits</span></a>
+								<a href="#careers"><span data-hover="Careers">Careers</span></a>
 							</li>
 							<li class="page-scroll">
-								<a href="#careers"><span data-hover="Careers">Careers</span></a>
+								<a href="#events"><span data-hover="Events">Events</span></a>
 							</li>
 							<li class="page-scroll">
 								<a href="#team"><span data-hover="Team">Team</span></a>
@@ -247,48 +247,91 @@
 </section>
 <!-- End About section -->
 
-<!-- Services section -->
-<section id="services">
+<!-- Benefits section -->
+<section id="benefits">
 	<div class="container g-pt-100 g-pb-40">
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2">
 				<div class="g-heading-v9 text-center g-mb-30">
-					<h2><strong>What We Do</strong></h2>
+					<h2><strong>Benefits</strong></h2>
 				</div>
-				<p class="text-center g-fs-16 g-mb-60">Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in. Donec in blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc ullamcorper, justo a iaculis elementum, enim orci viverra eros, fringilla porttitor lorem eros vel</p>
+				<p class="text-center g-fs-16 g-mb-60">Case Consulting recognizes that employees are its number one asset and therefore offers a salary and benefits package that reflect this.</p>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-sm-6 content-boxes-v7">
-				<i class="fa fa-user-secret pull-left g-theme-text-color-1"></i>
+				<i class="fa fa-gift pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
-					<h4 class="text-uppercase"><strong>Criminal Law</strong></h4>
-					<p>Proin dignissim eget enim id aliquam. Proin ornare dictum leo, non elementum tellus molestie et. Vivamus sit amet scelerisque leo. In eu commodo est. Sed bibendum a metus ac sollicitudin. Curabitur elementum placerat elit vel accumsan.</p>
+					<h4 class="text-uppercase"><strong>Retirement</strong></h4>
+					<ul class="list-unstyled marked-list-v1">
+						<li data-mark="-">
+							<p class="benefits-bullets">Monthly contribution of 3% of your salary in your <a id="retirement-link"href="http://www.sharebuilder401k.com/">401k</a>, without the requirement of an employee contribution.</p>
+						</li>
+						<li data-mark="-">
+							<p class="benefits-bullets">Annual lump sum profit sharing of 10%, deposited at the end of each year.</p>
+						</li>
+						<li data-mark="-">
+							<p class="benefits-bullets">Employees are immediately fully vested in the plan.</p>
+						</li>
+					</ul>
 				</div>
 			</div>
 			<div class="col-sm-6 content-boxes-v7">
-				<i class="fa fa-institution pull-left g-theme-text-color-1"></i>
+				<i class="fa fa-medkit pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
-					<h4 class="text-uppercase"><strong>Civil Law</strong></h4>
-					<p>nteger commodo est id erat bibendum, eu convallis dolor tempus. Fusce mollis blandit eros. Nunc quis sapien in massa varius convallis at sed justo. Praesent nec consectetur nibh, sed lobortis turpis.</p>
+					<h4 class="text-uppercase"><strong>Health Care</strong></h4>
+					<ul class="list-unstyled marked-list-v1">
+						<li data-mark="-">
+							<p class="benefits-bullets"> Full Medical, Dental, and Vision insurance coverage</p>
+						</li>
+						<li data-mark="-">
+							<p class="benefits-bullets"> Includes a Health Savings Account for immediate family members, allowing funds to be set aside to be used on future medical expenses</p>
+						</li>
+						<li data-mark="-">
+							<p class="benefits-bullets"> Case Consulting contributes up to $4000 to employee HSAs</p>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-sm-6 content-boxes-v7">
-				<i class="fa fa-suitcase pull-left g-theme-text-color-1"></i>
+				<i class="fa fa-diamond pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
-					<h4 class="text-uppercase"><strong>Business Law</strong></h4>
-					<p>Aenean lobortis ante ac porttitor eleifend. Morbi massa justo, gravida sollicitudin tortor vel, dignissim viverra lectus. In varius blandit condimentum. Pellentesque rutrum mauris ornare libero imperdiet pellentesque.</p>
+					<h4 class="text-uppercase"><strong>Additional Benefits</strong></h4>
+					<ul class="list-unstyled marked-list-v1">
+						<li data-mark="-">
+							<p class="benefits-bullets">33 days of leave each year for PTO, Holidays and Training.</p>
+						</li>
+						<li data-mark="-">
+							<p class="benefits-bullets">$1800 per calendar year towards purchase of employee computer/tablet or other technology related device</p>
+						</li>
+						<li data-mark="-">
+							<p class="benefits-bullets">$2500 referral bonus for fully cleared candidates</p>
+						</li>
+						<li data-mark="-">
+							<p class="benefits-bullets">Dependent care account providing tax deferred savings for child care</p>
+						</li>
+					</ul>
 				</div>
 			</div>
 			<div class="col-sm-6 content-boxes-v7">
-				<i class="fa fa-money pull-left g-theme-text-color-1"></i>
+				<i class="fa fa-graduation-cap pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
-					<h4 class="text-uppercase"><strong>Tax Law</strong></h4>
-					<p>Nam et nulla rutrum, dignissim eros quis, dictum eros. In ullamcorper molestie neque, ac faucibus felis efficitur sed. Nam et tristique nisi. Cras iaculis venenatis libero. Suspendisse fermentum, ipsum ac facilisis elementu.</p>
+					<h4 class="text-uppercase"><strong>Professional Development</strong></h4>
+					<ul class="list-unstyled marked-list-v1">
+						<li data-mark="-">
+							<p class="benefits-bullets">$3,500 per year towards professional development and certification</p>
+						</li>
+						<li data-mark="-">
+							<p class="benefits-bullets">Includes certifications, screencasts, CBTs, conferences, books, etc.</p>
+						</li>
+						<li data-mark="-">
+							<p class="benefits-bullets">24 hours per year of PTO for professional development and certification</p>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -296,7 +339,7 @@
 
 	</div>
 </section>
-<!-- End Services section -->
+<!-- End Benefits section -->
 
 <!-- Why we section -->
 <section id="why-we" class="g-theme-bg-color-1 g-text-color-2 no-column-space">
@@ -335,8 +378,8 @@
 </section>
 <!-- End Why we section -->
 
-<!-- Benefits section -->
-<section id="benefits" class="g-theme-bg-color-1 g-text-color-2 no-column-space">
+<!-- Careers section -->
+<section id="careers" class="g-theme-bg-color-1 g-text-color-2 no-column-space">
 	<div class="container-fluid">
 		<div class="row equal-height-columns">
 			<div class="col-sm-6">
@@ -346,7 +389,7 @@
 				<div class="g-pl-80 g-pr-80 g-pl-15--xs g-pr-15--xs g-dp-table-cell g-va-middle equal-height-column benefits-container">
 					<div class="g-pt-100 g-pb-30">
 						<div class="g-heading-v9 g-mb-30">
-							<h2><strong>Benefits</strong></h2>
+							<h2><strong>Careers</strong></h2>
 						</div>
 						<p id="benefits-description">Case Consulting recognizes that employees are its number one asset and therefore offers a salary and benefits package that reflect this.</p>
 
@@ -466,15 +509,15 @@
 							</div>
 
 		</section>
-		<!-- End Benefits section -->
+		<!-- End Careers section -->
 
-		<!-- careers section -->
-		<section id="careers">
+		<!-- Events section -->
+		<section id="events">
 			<div class="container g-pt-100">
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 text-center">
 						<div class="g-heading-v9 text-center g-mb-30">
-							<h2><strong>Careers</strong></h2>
+							<h2><strong>Events</strong></h2>
 						</div>
 						<p class="g-fs-16 g-mb-60">Case Consulting is interested in experienced professionals with niche skills, who are focused on delivering value to the client, in a flexible non-bureaucratic environment.</p>
 					</div>
@@ -598,7 +641,7 @@
 		</div>
 	</div>
 </section>
-
+<!-- End Events section -->
 
 <!-- Team section -->
 <section id="team">
