Added nav description

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -2,7 +2,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-	<title>Lawyer | Unify - Responsive Website Template</title>
+	<title>Case Consulting | Consult with Case</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
