site-additions: added color bars in about section

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -222,23 +222,30 @@
 	<div class="container-fluid no-column-space">
 		<div class="row equal-height-columns">
 			<div class="col-sm-4 g-text-color-1">
-				<div class="arrow-section-block arrow-bottom text-center equal-height-column">
-					<h3 class="text-uppercase g-mb-30"><strong>Work that Matters</strong></h3>
-					<p>Case Consulting is a small business focused on providing highly talented, exceptionally skilled developers, managers and integrators to meet mission critical requirements across the IC.</p>
+				<div class="arrow-section-block arrow-bottom text-center equal-height-column ">
+					<div class="g-heading-v9">
+						<h3 class="text-uppercase"><strong>Work that Matters</strong></h3>
+					</div>
+
+					<p class="bar-up">Case Consulting is a small business focused on providing highly talented, exceptionally skilled developers, managers and integrators to meet mission critical requirements across the IC.</p>
 				</div>
 				<div class="arrow-section-img"><img class="full-width" src="assets/img/workstation.jpeg" alt=""></div>
 			</div>
 			<div class="col-sm-4 g-text-color-2 g-theme-bg-color-1">
 				<div class="arrow-section-img"><img class="full-width" src="assets/img/conference-room.jpg" alt=""></div>
 				<div class="arrow-section-block arrow-top text-center equal-height-column">
-					<h3 class="text-uppercase g-mb-30"><strong>Clients that care</strong></h3>
-					<p>We provide top-notch IT staff to Commercial and Federal Government customers with experience in delivering superior system engineering expertise, project management support, and application development and design via Agile methodologies.</p>
+					<div class="center-font g-heading-v9 text-center "
+						<h3 class="text-uppercase"><strong>Clients that care</strong></h3>
+					</div>
+					<p class="bar-up">We provide top-notch IT staff to Commercial and Federal Government customers with experience in delivering superior system engineering expertise, project management support, and application development and design via Agile methodologies.</p>
 				</div>
 			</div>
 			<div class="col-sm-4 g-text-color-1">
 				<div class="arrow-section-block arrow-bottom text-center equal-height-column">
-					<h3 class="text-uppercase g-mb-30"><strong>Leaders that captivate</strong></h3>
-					<p>Case Consulting has a well-earned reputation for quality, responsiveness and absolute excellence.  We take pride in our ability to fully understand and embrace our customers and their needs, and provide innovative, polished, and inspiring applications of systems and technology.</p>
+					<div class="g-heading-v9 text-right">
+						<h3 class="text-uppercase text-center"><strong>Leaders that captivate</strong></h3>
+					</div>
+					<p class="bar-up">Case Consulting has a well-earned reputation for quality, responsiveness and absolute excellence.  We take pride in our ability to fully understand and embrace our customers and their needs, and provide innovative, polished, and inspiring applications of systems and technology.</p>
 				</div>
 				<div class="arrow-section-img"><img class="full-width" src="assets/img/suit.jpg" alt=""></div>
 			</div>
