site-additions: moved fas up

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -268,7 +268,7 @@
 
 		<div class="row">
 			<div class="col-sm-6 content-boxes-v7">
-				<i class="fa fa-gift pull-left g-theme-text-color-1"></i>
+				<i id="benefits-fas" class="fa fa-gift pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
 					<h4 class="text-uppercase"><strong>Retirement</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
@@ -285,7 +285,7 @@
 				</div>
 			</div>
 			<div class="col-sm-6 content-boxes-v7">
-				<i class="fa fa-medkit pull-left g-theme-text-color-1"></i>
+				<i id="benefits-fas" class="fa fa-medkit pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
 					<h4 class="text-uppercase"><strong>Health Care</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
@@ -305,7 +305,7 @@
 
 		<div class="row">
 			<div class="col-sm-6 content-boxes-v7">
-				<i class="fa fa-diamond pull-left g-theme-text-color-1"></i>
+				<i id="benefits-fas" class="fa fa-diamond pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
 					<h4 class="text-uppercase"><strong>Additional Benefits</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
@@ -325,7 +325,7 @@
 				</div>
 			</div>
 			<div class="col-sm-6 content-boxes-v7">
-				<i class="fa fa-graduation-cap pull-left g-theme-text-color-1"></i>
+				<i id="benefits-fas" class="fa fa-graduation-cap pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
 					<h4 class="text-uppercase"><strong>Professional Development</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
