site-additions: added new awards section

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -706,68 +706,19 @@
 	<div class="container">
 
 		<!-- Testimonials Info -->
+
 		<div class="row g-mb-70">
 			<div class="col-sm-8 col-sm-offset-2 g-heading-v9 text-center">
-				<h2><strong>From Our Clients</strong></h2>
+				<h2><strong>Awards</strong></h2>
 			</div>
 		</div>
+
 		<!-- End Testimonials Info -->
-
-		<div class="ms-staff-carousel">
-			<!-- MasterSlider -->
-			<div class="master-slider" id="masterslider">
-				<!-- Item 1 -->
-				<div class="ms-slide">
-					<img src="assets/plugins/master-slider/masterslider/style/blank.gif" data-src="assets/img-temp/testimonials/t1.jpg" alt="">
-					<div class="ms-info">
-						<h3 class="ms-info-name">Julia B. Mcraflane</h3>
-						<h4 class="ms-info-position">Spencet Group</h4>
-						<p><em>"Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt."</em></p>
-					</div>
-				</div>
-				<!-- End Item 1 -->
-
-				<!-- Item 2 -->
-				<div class="ms-slide">
-					<img src="assets/plugins/master-slider/masterslider/style/blank.gif" data-src="assets/img-temp/testimonials/t2.jpg" alt="">
-					<div class="ms-info">
-						<h3 class="ms-info-name">Amy Clayton</h3>
-						<h4 class="ms-info-position">Abibas</h4>
-						<p><em>Ut augue diam, lacinia fringilla erat eu, vehicula commodo quam. Aliquam eget accumsan ligula. Maecenas sit amet consectetur lectus. Suspendisse commodo et magna non pulvinar. Quisque</em> et ul"tricies sem, et vulputate dui. Morbi aliquam leo id ipsum tempus mo"llis.</p>
-					</div>
-				</div>
-				<!-- End Item 2 -->
-
-				<!-- Item 3 -->
-				<div class="ms-slide">
-					<img src="assets/plugins/master-slider/masterslider/style/blank.gif" data-src="assets/img-temp/testimonials/t3.jpg" alt="">
-					<div class="ms-info">
-						<h3 class="ms-info-name">Fred Penner</h3>
-						<h4 class="ms-info-position">Ruma</h4>
-						<p><em>"Ut augue diam, lacinia fringilla erat eu, vehicula commodo quam. Aliquam eget accumsan ligula. Maecenas sit amet consectetur lectus. Suspendisse commodo et magna non pulvinar."</em></p>
-					</div>
-				</div>
-				<!-- End Item 3 -->
-
-				<!-- Item 4 -->
-				<div class="ms-slide">
-					<img src="assets/plugins/master-slider/masterslider/style/blank.gif" data-src="assets/img-temp/testimonials/t4.jpg" alt="">
-					<div class="ms-info">
-						<h3 class="ms-info-name">Martina Saiz</h3>
-						<h4 class="ms-info-position">Jonda</h4>
-						<p><em>"Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt."</em></p>
-					</div>
-				</div>
-				<!-- End Item 4 -->
-
-				<!-- Item 5 -->
-				<div class="ms-slide">
-					<img src="assets/plugins/master-slider/masterslider/style/blank.gif" data-src="assets/img-temp/testimonials/t5.jpg" alt="">
-					<div class="ms-info">
-						<h3 class="ms-info-name">Joseph B. Seward</h3>
-						<h4 class="ms-info-position">Aodi</h4>
-						<p><em>"Maecenas sit amet consectetur lectus. Suspendisse commodo et magna non pulvinar. Quisque et ultricies sem, et vulputate dui. Morbi aliquam leo id ipsum tempus mollis."</em></p>
-
+		<div class="container">
+		<div class="col-xs-3">
+			<img src="assets/img/best-place-to-work.png" alt="" class="img-rounded img-responsive" />
+		</div>
+		</div>
 		</section>
 		<!-- End Testimonials section -->
 
